@@ -12,6 +12,8 @@ What's New in Python 2.6.6 alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #1583863: An unicode subclass can now override the __unicode__ method
+
 - Issue #7544: Preallocate thread memory before creating the thread to avoid
   a fatal error in low memory condition.
 
